derive/test/compile_fail/enum_dynamic_unindexed_variants.rs
use sval_derive::*;

#[derive(Value)]
#[sval(dynamic, unindexed_variants)]
pub enum Enum {
    A,
    B,
    C,
}

fn main() {

}