derive/test/compile_fail/enum_dynamic_unindexed_variants.stderr
error: proc-macro derive panicked
 --> compile_fail/enum_dynamic_unindexed_variants.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: dynamic enums don't have variants
